# drl

./: .dockerignore  .gitignore  LICENSE  README.md  apelid.ipynb  compose.yml  dataset.ipynb  dataset.md  dataset_hybrid.ipynb  dataset_onehot.ipynb  dataset_test.ipynb  pyproject.toml
binary/01_dqn/: 01_dqn.ipynb  re_01_dqn.pth  re_01_dqn_cic.pth
binary/02_ddqn/: 01_ddqn.ipynb
binary/04_reinforce/: loop.py
binary/05_a2c/: 01_a2c.ipynb
binary/06_ppo/: 01_ppo.ipynb  01_ppo.py
binary/99_myself/: 01_dqn.ipynb
docker/: Dockerfile
log/: 01_binary.ipynb  01_multiple.ipynb  Makefile  apelid.ipynb  wgan.ipynb
log/py/: label.txt
multiple/01_dqn/: 01_dqn copy.ipynb
multiple/03_d3qn/: 01_d3qn.ipynb
multiple/04_reinforce/: 01_reinforce.ipynb
multiple/99_myself/: 01_dqn.ipynb  02_dqn.ipynb  04_ppd.py  graph.ipynb
wgan/: no1.ipynb
