[project]
name = "drl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dask[dataframe]>=2024.8.0",
    "flow-package",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "stable-baselines3>=2.6.0",
    "torch>=2.6.0",
]


[tool.uv.sources]
flow-package = { path = "../flow-package" }
